Expose edge ids
