# Sources/ValhallaModels/Models/IntersectingEdge.swift
@@ -19,17 +19,21 @@ public struct IntersectingEdge: Codable, Hashable {
     public var toEdgeNameConsistency: Bool?
     /** A list of street names for the intersecting edge */
     public var names: [String]?
+    public var edgeId: Int64?
+    public var sign: EdgeSign?
     public var driveability: Traversability?
     public var cyclability: Traversability?
     public var walkability: Traversability?
     public var use: EdgeUse?
     public var roadClass: RoadClass?
 
-    public init(beginHeading: Int? = nil, fromEdgeNameConsistency: Bool? = nil, toEdgeNameConsistency: Bool? = nil, names: [String]? = nil, driveability: Traversability? = nil, cyclability: Traversability? = nil, walkability: Traversability? = nil, use: EdgeUse? = nil, roadClass: RoadClass? = nil) {
+    public init(beginHeading: Int? = nil, fromEdgeNameConsistency: Bool? = nil, toEdgeNameConsistency: Bool? = nil, names: [String]? = nil, edgeId: Int64? = nil, sign: EdgeSign? = nil, driveability: Traversability? = nil, cyclability: Traversability? = nil, walkability: Traversability? = nil, use: EdgeUse? = nil, roadClass: RoadClass? = nil) {
         self.beginHeading = beginHeading
         self.fromEdgeNameConsistency = fromEdgeNameConsistency
         self.toEdgeNameConsistency = toEdgeNameConsistency
         self.names = names
+        self.edgeId = edgeId
+        self.sign = sign
         self.driveability = driveability
         self.cyclability = cyclability
         self.walkability = walkability
@@ -42,6 +46,8 @@ public struct IntersectingEdge: Codable, Hashable {
         case fromEdgeNameConsistency = "from_edge_name_consistency"
         case toEdgeNameConsistency = "to_edge_name_consistency"
         case names
+        case edgeId = "edge_id"
+        case sign
         case driveability
         case cyclability
         case walkability
@@ -57,6 +63,8 @@ public struct IntersectingEdge: Codable, Hashable {
         try container.encodeIfPresent(fromEdgeNameConsistency, forKey: .fromEdgeNameConsistency)
         try container.encodeIfPresent(toEdgeNameConsistency, forKey: .toEdgeNameConsistency)
         try container.encodeIfPresent(names, forKey: .names)
+        try container.encodeIfPresent(edgeId, forKey: .edgeId)
+        try container.encodeIfPresent(sign, forKey: .sign)
         try container.encodeIfPresent(driveability, forKey: .driveability)
         try container.encodeIfPresent(cyclability, forKey: .cyclability)
         try container.encodeIfPresent(walkability, forKey: .walkability)
